[project]
name = "chumpy"
version = "0.71"
description = "Autodifferentiation tool for Python"
authors = [
  {name = "Matthew Loper", email = "matt.loper@gmail.com"},
]

readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "scipy>=1.13.1",
]
classifiers=[
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 4 - Beta',

    # Indicate who your project is intended for
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Mathematics',

    # Pick your license as you wish (should match "license" above)
    'License :: OSI Approved :: MIT License',

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    'Programming Language :: Python :: 3',

    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux'
]

[project.urls]
Repository='https://github.com/mattloper/chumpy'
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.8.0",
]
